Fix more Java code style/deprecation warnings and suboptimal pieces
Signed-off-by: Chad Wilson <29788154+chadlwilson@users.noreply.github.com>